welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: value faireMotif
    faireMotif();
    ^PatternPicture:4: error: not found: value replacement
    replacement();
    ^