welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() { 
  for (i <- 1 to 4) {
    faireMotif();
    replacement();
  }
}

def faireRouge() {
  setCouleurBrosse(Color.red)
	for (i <- 1 to 2) {
  	avance();
  	baisseBrosse();
  	leveBrosse();
  	gauche();
  	avance();
  	gauche(); 
  } 
}